[package]
name = "fbsockets"
version = "0.2.0"
edition = "2021"
description = "Low-level framed IPC over Unix domain sockets with FD passing, sync by default and optional async API"
license = "BSD-3-Clause"
repository = "https://github.com/yourname/fbsockets"
rust-version = "1.75"

[features]
default = []
async = ["dep:tokio"]

[dependencies]
libc = "0.2"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt", "time", "sync", "io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
libc = "0.2"
