[package]
name = "fbsockets"
version = "1.0.0"
edition = "2024"
description = "Low-level framed IPC over Unix domain sockets with FD passing, sync by default and optional async API"
license = "BSD-3-Clause"

[features]
default = []
async = ["dep:tokio"]

[dependencies]
libc = "0.2"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1", features = ["net", "rt", "time", "sync", "io-util"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
libc = "0.2"
